# multi_agent_workflow

./: .env.example  README.md  main.py  pyproject.toml
.cursor/rules/: agent.md  browser_agent.md  code_agent.md  comms_agent.md  orchestrator.md  research_agent.md
.github/workflows/: ci.yml
agents/: browser_agent.py  code_agent.py  comms_agent.py  orchestrator.py  reflection_agent.py  research_agent.py
config/: settings.py
graph/: checkpointer.py  graph_builder.py  runner.py  state.py
llm/: ollama_client.py
multi_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agents.py  test_graph.py  test_runner.py  test_state.py  test_tools.py  test_upload_parser.py
tools/: browser_tools.py  code_tools.py  comms_tools.py  search_tools.py
ui/: __init__.py  app.py  upload_parser.py
