[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Production-grade multi-agent system with LangGraph orchestration"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "langsmith>=0.1",
    "duckduckgo-search>=6",
    "playwright>=1.48",
    "python-telegram-bot>=21",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "loguru>=0.7",
    "aiosmtplib>=3",
    "httpx>=0.27",
    "wikipedia>=1.4",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["agents*", "config*", "graph*", "llm*", "tools*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
